--- a/frame3.html
+++ b/frame3.html
@@ -14,6 +14,7 @@
      no-repeat;
      background-position: center;
      background-size: cover;
+     margin: 0px 5px 0px 5px;
      }
     
      </style>
