--- a/frame1.html
+++ b/frame1.html
@@ -6,8 +6,8 @@
 				 .f1
       {font-family:"Times New Roman";
       color:brown;}
-      img { height:3%;
-      width: 6%}    
+      img { height:100px;
+      width: 100px}    
 				</style>
 					<title>Resume</title>
 </head>
