--- a/frame2.html
+++ b/frame2.html
@@ -6,7 +6,8 @@
   <style>
   body, html {margin:5px;}
   .i { 
-        width: 30% ;
+        width: 100px ;
+        height: 100px;
         }
    .t {
         font-family: "Times New Roman";
