--- a/frame1.html
+++ b/frame1.html
@@ -6,8 +6,8 @@
 				 .f1
       {font-family:"Times New Roman";
       color:brown;}
-      img { height:5px;
-      width: 5px}    
+      .i { height:5px;
+      width: 5px;}    
 				</style>
 					<title>Resume</title>
 </head>
@@ -15,8 +15,8 @@
 	<center>
 	 <h3 class="f1">Eesam Thanu Bishwanth Baji</h3>
 	  Male | D.O.B : dd/MM/YYYY <br><img src="mail.jpg">: xyz@email.com <br>
-	<img src="ph.jpg">: XXXXX-XXXXX  | 
-		<img src="fb.jpg">: user_name |
-	<img src="lin.jpg">: link  </center>
+	<img src="ph.jpg" class="i">: XXXXX-XXXXX  | 
+		<img src="fb.jpg" class="i">: user_name |
+	<img src="lin.jpg" class="i">: link  </center>
 </body>
 </html>
