--- a/frame1.html
+++ b/frame1.html
@@ -15,9 +15,6 @@
 <body>
 	<center>
 	 <h3 class="f1">Eesam Thanu Bishwanth Baji</h3>
-	  Male | D.O.B : dd/MM/YYYY <br><img src="mail.jpg">: xyz@email.com <br>
-	<img src="ph.jpg">: XXXXX-XXXXX  | 
-		<img src="fb.jpg">: user_name |
-	<img src="lin.jpg">: link  </center>
+	  Male | D.O.B : dd/MM/YYYY <br><img src="mail.jpg">: xyz@email.com | <img src="ph.jpg">: XXXXX-XXXXX</center>
 </body>
 </html>
