--- a/award.html
+++ b/award.html
@@ -8,17 +8,6 @@
      font-family: "Serif";
      color: magenta
      }
-     body,html
-     {height:100%;
-     margin:0;
-     }
-     .bg {
-     min-height:600px;  
-     background-Image: url("edu1.jpg");
-     no-repeat;
-     background-position: center;
-     background-size: cover; 
-     }
      .t3
      { font-family:"Times New Roman";
      color:blue;
@@ -36,7 +25,7 @@
      </style>
      <title>Education</title>
 </head>
-<body class="bg"> 
+<body> 
 <center>
 <h2 class="t2">Scholistic Distinctions</h2>
 <h4 class="t3">Class 12</h4>
