--- a/award.html
+++ b/award.html
@@ -29,19 +29,19 @@
 <center>
 <h2 class="t2">Scholistic Distinctions</h2>
 <h4 class="t3">Class 12</h4>
-<img src="/storage/emulated/0/Download/gold.png"> <br>
+<img src="gold.png"> <br>
     Gold Medal in Computer Science <br> <br>
-    <img src="/storage/emulated/0/Download/12.jpg"> <br>
+    <img src="12.jpg"> <br>
         Second in Aggregate <br> <hr>
 
 <h4 class="t3">Class 11</h4>
-<img src="/storage/emulated/0/Download/11.jpg"> <br>
+<img src="11.jpg"> <br>
 Second in Aggregate
 <br><hr>
 <h4 class="t3">Class 10</h4>
-<img src="/storage/emulated/0/Download/10.jpg"> <br>
+<img src="10.jpg"> <br>
 Award for First position in Mathematics<br> <br>
-<img src="/storage/emulated/0/Download/deb.png"> <br>
+<img src="deb.png"> <br>
 First position in Telugu Debate
 
 
